NovaTech-Metadata/force-app/main/default/objects/Opportunity/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Long Term</fullName>
            </value>
            <value>
                <fullName>Short Term</fullName>
            </value>
            <value>
                <fullName>OneTime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>