NovaTech-Metadata/force-app/main/default/objects/Opportunity/fields/Primary_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_Line__c</fullName>
    <label>Primary Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Licenses</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>