NovaTech-Metadata/force-app/main/default/objects/Opportunity/fields/Subscription_Attach__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Attach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Attach</label>
    <type>Checkbox</type>
</CustomField>