NovaTech-Metadata/force-app/main/default/objects/Opportunity/recordTypes/NovaTech_B2B_Sales_Process.recordType-meta.xml
<RecordType>
    <fullName>NovaTech_B2B_Sales_Process</fullName>
    <active>true</active>
    <businessProcess>NovaTech B2B Sales Process</businessProcess>
    <description>NovaTech Custom Sales Process Record type.</description>
    <label>NovaTech B2B Sales Process</label>
</RecordType>